--- a/WikiGame/app/src/main/res/layout/activity_main.xml
+++ b/WikiGame/app/src/main/res/layout/activity_main.xml
@@ -11,61 +11,66 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/numberOfClicks_textView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/searchTopicName_textView"
         android:layout_width="406dp"
         android:layout_height="60dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
+        android:background="#F6E0E0"
         android:fontFamily="@font/roboto_medium"
         android:text="NameOfPersonToFind"
         android:textAlignment="center"
         android:textColor="#302E2E"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="103dp"
         android:layout_height="54dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center|right"
         android:text="Number of clicks:"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfClicks_textView"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/webView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTopicName_textView" />
 
     <TextView
         android:id="@+id/numberOfClicks_textView"
         android:layout_width="100dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="28dp"
-        android:text="100"
+        android:gravity="center"
+        android:text="0"
         android:textColor="@color/colorPrimary"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@+id/nextGame_Button"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/searchTopicName_textView" />
 
     <Button
-        android:background="@color/colorAccent"
         android:id="@+id/nextGame_Button"
         android:layout_width="91dp"
         android:layout_height="53dp"
-        android:layout_marginEnd="24dp"
-        android:onClick="startNewGame"
-        android:text="NextGame"
+        android:layout_marginEnd="16dp"
+        android:background="@color/colorAccent"
+        android:onClick="nextGameButtonListener"
+        android:text="Next Game"
         android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfClicks_textView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/webView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTopicName_textView"
+        app:layout_constraintVertical_bias="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
